<resources>
    <string name="app_name">Story App</string>
    <string name="something_wrong">Oops.. something went wrong.</string>

    <string name="signup">Sign Up</string>
    <string name="illustration">Illustration</string>
    <string name="title_signup_page">Please complete your data below</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_name">Input your Name</string>
    <string name="input_email">Input your Email</string>
    <string name="input_password">Input your Password</string>

    <string name="login">Login</string>
    <string name="message_login_page">Please enter your data</string>
    <string name="title_login_page">Ready to share your learning experiences?</string>

    <string name="story_photo">Story photo</string>
    <string name="story_username">Name</string>
    <string name="story_description">Description</string>
    <string name="not_found">Data not found</string>
    <string name="retry">Retry</string>

    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="message_logout_dialog">Do you want to logout?</string>

    <string name="add_story">Add Story</string>
    <string name="image_preview">Image preview</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="take_photo">Take picture</string>
    <string name="switch_camera">Switch camera</string>
    <string name="image_not_found">Please take a picture first</string>
    <string name="location_not_found">Location Not Found</string>

    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="activate">Activate</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="successfully_uploaded">Image Successfully Uploaded</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="change">Change Picture</string>
    <string name="hint_description">Add a caption…</string>

    <string name="example_mail">example@example.com</string>
    <string name="input_description">Input Caption</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="take_photo_failed">Unable to take Picture</string>
    <string name="unable_show_camera">Unable to show Camera</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>

    <string name="home">Home</string>
    <string name="maps">Maps</string>

    <string name="titleInfoWindow">Info Window</string>
    <string name="descriptionInfoWindow">Description Info Window</string>
    <string name="today">Today</string>
    <string name="show_more">Show More</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="cant_find_style">Can\'t find style. Error: </string>
</resources>