<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_light_background"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/markerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleInfoWindow"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/markerPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/story_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markerTitle"
        tools:src="@tools:sample/avatars"/>
    <TextView
        android:id="@+id/markerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriptionInfoWindow"
        android:textSize="24sp"
        android:textColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/markerPhoto"/>
</androidx.constraintlayout.widget.ConstraintLayout>