<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryFragment">
    <com.jsibbold.zoomage.ZoomageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerInside"
        app:zoomage_restrictBounds="true"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:src="@tools:sample/backgrounds/scenic" />
    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start|bottom"
        android:src="@drawable/ic_camera"
        android:text="@string/camera"
        android:background="@null"
        android:layout_margin="24dp"
        style="@style/IconHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/upload" />
    <com.intermediate.submission1.view.CustomEditText
        android:id="@+id/descriptionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/hint_description"
        android:inputType="text"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/cameraButton"
        app:layout_constraintRight_toLeftOf="@id/uploadButton"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageButton
        android:id="@+id/uploadButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_upload"
        android:text="@string/upload"
        android:background="@null"
        android:layout_margin="24dp"
        style="@style/IconHome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/upload" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>